@@ -1,0 +1,52 @@
+#include <stdio.h>
+#include <string.h>
+#include <mosquitto.h>
+#include <mosquitto_broker.h>
+#include <mosquitto_plugin.h>
+
+int mosquitto_auth_acl_check_v5(int event, void *event_data, void *user_data);
+int mosquitto_auth_unpwd_check_v5(int event, void *event_data, void *user_data);
+
+static mosquitto_plugin_id_t *plg_id;
+
+static int login_count = 0;
+
+int mosquitto_plugin_version(int supported_version_count, const int *supported_versions)
+{
+	return 5;
+}
+
+int mosquitto_plugin_init(mosquitto_plugin_id_t *identifier, void **user_data, struct mosquitto_opt *auth_opts, int auth_opt_count)
+{
+	plg_id = identifier;
+
+	mosquitto_callback_register(plg_id, MOSQ_EVT_ACL_CHECK, mosquitto_auth_acl_check_v5, NULL, NULL);
+	mosquitto_callback_register(plg_id, MOSQ_EVT_BASIC_AUTH, mosquitto_auth_unpwd_check_v5, NULL, NULL);
+
+	return MOSQ_ERR_SUCCESS;
+}
+
+int mosquitto_plugin_cleanup(void *user_data, struct mosquitto_opt *auth_opts, int auth_opt_count)
+{
+	mosquitto_callback_unregister(plg_id, MOSQ_EVT_ACL_CHECK, mosquitto_auth_acl_check_v5, NULL);
+	mosquitto_callback_unregister(plg_id, MOSQ_EVT_BASIC_AUTH, mosquitto_auth_unpwd_check_v5, NULL);
+
+	return MOSQ_ERR_SUCCESS;
+}
+
+int mosquitto_auth_acl_check_v5(int event, void *event_data, void *user_data)
+{
+	struct mosquitto_evt_acl_check *ed = event_data;
+
+	if(login_count == 2 && ed->access == MOSQ_ACL_WRITE){
+		return MOSQ_ERR_ACL_DENIED;
+	}else{
+		return MOSQ_ERR_SUCCESS;
+	}
+}
+
+int mosquitto_auth_unpwd_check_v5(int event, void *event_data, void *user_data)
+{
+	login_count++;
+	return MOSQ_ERR_SUCCESS;
+}
